--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,11 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <h1>Easy contact forms, No setup.</h1>
+        <p>Have you ever tried to make a contact form for your website? If you have, you'll know that it involves HTML for the form, Javascript for the verification, and PHP for the actual sending. It's a pretty big task, and if you use one of those "easy form" services, you sacrifice customizability. You're forced to use their drag-and-drop editor, which lacks any advanced features whatsoever. What if you could create a form in HTML, and someone else would take care of the rest? Sounds awesome? Welcome to FormMailer.</p>
+        <p>
+          <a class="btn btn-primary btn-large" href="/signup" style="margin-right:15px">Sign up</a>
+        </p>
       </div>
     </div>
 
@@ -11,18 +13,16 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2 style="margin-bottom:2px">Bring Your Own Form</h2>
+          <p>FormMailer is unlike other services in that we don't oversimplify things. There's no WYSIWYG editor, meaning that you can make <em>your</em> form however you like. CSS styles? No problem. Custom jQuery scripts and plugins? Great! We let you create <em>your</em> form, while we take care of the rest. It's that easy.</p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+
+          <h2 style="margin-bottom:2px">Server-Side Validation</h2>
+          <p>FormMailer has built-in server-side form validation, and if we're doing it, that means you don't have to. When a POST request is made, the API will first validate the request and issue a response with the reason if it doens't pass vaildation. And all of this is optional, so you can disable it if you like.</p>
        </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2 style="margin-bottom:2px">Powered by Mandrill</h2>
+          <p>FormMailer is powered by Mandrill. This means that you get tons of awesome features like templating, customization, and analytics. It's free for quite a few emails, and it's really easy to set up. Check out their website for more information.</p>
         </div>
       </div>
