--- a/views/layout.html
+++ b/views/layout.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/assets/ico/favicon.png">
 
-    <title>Form Mailer</title>
+    <title>FormMailer</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
@@ -57,7 +57,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>&copy; 2013 <strong><a href="http://www.sourcehut.com/" target="_blank">SourceHut</a></strong>. Built with <strong><a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a></strong>, powered by <strong><a href="http://nodejs.org/" target="_blank">node.js</a></strong>, and hosted on <strong><a href="https://openshift.redhat.com/app/" target="_blank">OpenShift</a></strong>.</p>
       </footer>
     </div> <!-- /container -->
 
