--- a/views/signup.html
+++ b/views/signup.html
@@ -21,6 +21,7 @@
 		      <button type="submit" class="btn btn-default">Submit</button>
 		    </div>
 		  </div>
+		  <input type='hidden' name='inputSubject' value='FormMailer Signup'/>
 		</form>
 	  </p>
 	</div>
