--- a/views/layout.html
+++ b/views/layout.html
@@ -38,12 +38,12 @@
           <a class="navbar-brand" href="#">FormMailer</a>
         </div>
         <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
+          <form class="navbar-form navbar-right" method='post' action='/signin'>
             <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+              <input type="text" placeholder="Email" class="form-control" name='username'/>
             </div>
             <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+              <input type="password" placeholder="Password" class="form-control" name='password'/>
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
