--- a/views/signin.html
+++ b/views/signin.html
@@ -30,7 +30,7 @@
 
     <div class="container">
 
-      <form class="form-signin" action= method='post' action='/signin'>
+      <form class="form-signin" method='post' action='/signin'>
         <h2 class="form-signin-heading">Please sign in</h2>
         <br/>
         {{status}}
